북마크 생성 및 API && Custom Exception 생성
