# storage/api-docs/api-docs.json
@@ -76,6 +76,41 @@
                 }
             }
         },
+        "/api/v1/bookmarks": {
+            "post": {
+                "tags": [
+                    "Bookmark"
+                ],
+                "summary": "북마크 생성",
+                "description": "북마크 생성",
+                "operationId": "store",
+                "requestBody": {
+                    "description": "",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "$ref": "#/components/schemas/BookmarkCreate"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "bad request"
+                    },
+                    "401": {
+                        "description": "unauthorized token"
+                    },
+                    "409": {
+                        "description": "unknown user"
+                    }
+                }
+            }
+        },
         "/api/v1/users": {
             "post": {
                 "tags": [
@@ -156,6 +191,28 @@
                 "type": "object",
                 "xml": {
                     "name": "BookmarkCategoryCreate"
+                }
+            },
+            "BookmarkCreate": {
+                "required": [
+                    "category_id",
+                    "token",
+                    "url"
+                ],
+                "properties": {
+                    "token": {
+                        "type": "string"
+                    },
+                    "category_id": {
+                        "type": "string"
+                    },
+                    "url": {
+                        "type": "string"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "BookmarkCreate"
                 }
             },
             "UserCreate": {
